2008-09-20  Eric B. Weddington  <eric.weddington@atmel.com>

	Contributed by Lars Jonsson
	Fix bug #22572.
	* doc/api/faq.dox: Add Makefile fragments for converting text and binary
	data to an object file.

2008-09-19  Eric B. Weddington  <eric.weddington@atmel.com>

	Contributed by Stu Bell.
	Fix bug #22878.
	* include/avr/eeprom.h: For the ATmega256x devices, do not call 
	any functions to implement the EEPROM routines as they have problems
	if they are in high memory. So for these devices we inline the
	functionality.

2008-09-19  Eric B. Weddington  <eric.weddington@atmel.com>

	Contributed by Mark Litwack.
	Patch #6500
	* doc/api/faq.dox: Add FAQ about reentrant code and functions in 
	avr-libc.
	* api/main_page.dox: Add reference to new FAQ.

2008-09-19  Eric B. Weddington  <eric.weddington@atmel.com>

	Fix for bug #23969.
	* include/avr/eeprom.h: Change part of the EEPROM read routine
	to inline assembly to avoid problems with certain AVR parts.

2008-09-13  Eric B. Weddington  <eric.weddington@atmel.com>

	* include/avr/sleep.h: Add support for ATmega3290P.
	* include/avr/wdt.h: Same.

2008-09-13  Eric B. Weddington  <eric.weddington@atmel.com>

	Fix for bug #22240.
    * include/avr/io.h: Add E2PAGESIZE constant to documentation. Clean
	up phrasing in documentation.
	* include/avr/io1200.h (E2PAGESIZE): Defined.
	* include/avr/io2313.h: Same.
	* include/avr/io2323.h: Same.
    * include/avr/io2343.h: Same.
    * include/avr/io4414.h: Same.
    * include/avr/io4433.h: Same.
    * include/avr/io4434.h: Same.
    * include/avr/io8515.h: Same.
    * include/avr/io8535.h: Same.
    * include/avr/io86r401.h: Same.
    * include/avr/io90pwm216.h: Same.
    * include/avr/io90pwm2b.h: Same.
    * include/avr/io90pwm316.h: Same.
    * include/avr/io90pwm3b.h: Same.
    * include/avr/io90pwmx.h: Same.
    * include/avr/iocan128.h: Same.
    * include/avr/iocan32.h: Same.
    * include/avr/iocan64.h: Same.
    * include/avr/iom103.h: Same.